fix: align about us images correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,10 +262,15 @@ breadcrumb {
   float: left;
 }
 
-.about-dogs-images img {
-  max-width: 100%;
-  max-height: 350px;
+.about-image {
   margin: 10px;
+  max-width: 30%;
+  min-width: 300px;
+  overflow: hidden;
+}
+
+#about-dogs {
+  text-align: center;
 }
 
 /* privacy.html */
